--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "weatherr",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +17,9 @@
   },
   "homepage": "https://github.com/kasra02/node2#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "postman-request": "^2.88.1-postman.27"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
